Try (and abort) using server, create new bundle.js

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
 
+    <p>This is a HTML page</p>
 
     <!-- SCRIPTS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bundle.js"></script>
-    <!-- <script src="songdata.js"></script> -->
   </body>
 </html>
