--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   </head>
   <body>
       <h1>hola</h1>
+      <code id="js-code">
+        
+      </code>
       <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script src="./index.js" charset="utf-8"></script>
   </body>
