Add working search and populate page with the first result

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <h1>Song data</h1>
+      <p>See the data that Spotify keeps about songs. Built using the <a href="https://developer.spotify.com/web-api/">Spotify Web API</a>.</p>
 
       <form id="track-search">
         <fieldset>
