--- a/public/index.html
+++ b/public/index.html
@@ -5,61 +5,164 @@
     <title>Songdata</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <main>
-      <h1>Song data</h1>
-      <p>See the data that Spotify keeps about songs. Built using the <a href="https://developer.spotify.com/web-api/">Spotify Web API</a>.</p>
 
-      <form id="track-search">
-        <fieldset>
-          <label for="search-input">Search for a song</label>
-          <input type="search" name="search-input" id="search-input">
-          <button type="submit" id="search-submit">Search</button>
-        </fieldset>
-      </form>
-
-      <!-- <code id="js-code"></code> -->
-
-      <dl>
-        <dt>Song:</dt>
-        <dd id="data-track"></dd>
-        <dt>Artist:</dt>
-        <dd id="data-artist"></dd>
-        <dt>Album:</dt>
-        <dd id="data-album"></dd>
-        <dt>Length:</dt>
-        <dd id="data-duration"></dd>
-        <dt>Tempo:</dt>
-        <dd id="data-tempo"></dd>
-        <dt>Key:</dt>
-        <dd id="data-key"></dd>
-        <dt>Popularity:</dt>
-        <dd id="data-popularity"></dd>
-        <dt>Danceability:</dt>
-        <dd id="data-danceability"></dd>
-        <dt>Energy:</dt>
-        <dd id="data-energy"></dd>
-        <dt>Joyousness:</dt>
-        <dd id="data-valence"></dd>
-      </dl>
-
-      <div class="song-data-point">
-        <h2>Tempo</h2>
-        <details>
-          <summary>More about tempo</summary>
-          <p>The overall estimated tempo of a track in beats per minute (BPM). In musical terminology, tempo is the speed or pace of a given piece and derives directly from the average beat duration.</p>
-        </details>
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h1>Song data</h1>
+            <p>See the data that Spotify keeps about songs. Built using the <a href="https://developer.spotify.com/web-api/">Spotify Web API</a>.</p>
+          </div>
+          <div class="col-9">
+            <form id="track-search">
+              <fieldset>
+                <label for="search-input">Search for a song</label>
+                <input type="search" name="search-input" id="search-input">
+                <button type="submit" id="search-submit">Search</button>
+              </fieldset>
+            </form>
+          </div>
+        </div>
       </div>
 
-      <div class="song-data-point">
-        <h2>Key and mode</h2>
-        <details>
-          <summary>More about key and mode</summary>
-          <p>The key the track is in. Mode indicates the modality (major or minor) of a track, the type of scale from which its melodic content is derived.</p>
-        </details>
+
+
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Song</h2>
+          </div>
+          <div class="col-9">
+            <span id="data-track" class="data-point"></span>
+          </div>
+        </div>
       </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Artist</h2>
+          </div>
+          <div class="col-9">
+            <span id="data-artist" class="data-point"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Album</h2>
+          </div>
+          <div class="col-9">
+            <span id="data-album" class="data-point"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Song length</h2>
+          </div>
+          <div class="col-9">
+            <span id="data-duration" class="data-point"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Tempo</h2>
+            <details>
+              <summary>About tempo</summary>
+              <div>
+                <p>The overall estimated tempo of a track in beats per minute (BPM). In musical terminology, tempo is the speed or pace of a given piece and derives directly from the average beat duration.</p>
+              </div>
+            </details>
+          </div>
+          <div class="col-9">
+            <span id="data-tempo" class="data-point"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Key and mode</h2>
+            <details>
+              <summary>About key and mode</summary>
+              <div>
+                <p>The key the track is in. Mode indicates the modality (major or minor) of a track, the type of scale from which its melodic content is derived.</p>
+              </div>
+            </details>
+          </div>
+          <div class="col-9">
+            <span id="data-key" class="data-point"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Popularity</h2>
+            <details>
+              <summary>About popularity</summary>
+              <div>
+                <p>The popularity of a track is a value between 0 and 100, with 100 being the most popular. The popularity is calculated by algorithm and is based, in the most part, on the total number of plays the track has had and how recent those plays are.</p>
+              </div>
+            </details>
+          </div>
+          <div class="col-9">
+            <span id="data-popularity" class="data-point"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Danceability</h2>
+            <p>Danceability describes how suitable a track is for dancing based on a combination of musical elements including tempo, rhythm stability, beat strength, and overall regularity. A value of 0 is least danceable and 100 is most danceable.</p>
+          </div>
+          <div class="col-9">
+            <span id="data-danceability" class="data-point"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Energy</h2>
+            <p>Energy is a measure from 0 to 100 and represents a perceptual measure of intensity and activity. Typically, energetic tracks feel fast, loud, and noisy. For example, death metal has high energy, while a Bach prelude scores low on the scale. Perceptual features contributing to this attribute include dynamic range, perceived loudness, timbre, onset rate, and general entropy.</p>
+          </div>
+          <div class="col-9">
+            <span id="data-energy" class="data-point"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Joyousness</h2>
+            <p>Called 'valence' by Spotify. A measure from 0 to 100 describing the musical positivity conveyed by a track. Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low valence sound more negative (e.g. sad, depressed, angry).</p>
+          </div>
+          <div class="col-9">
+            <span id="data-valence" class="data-point"></span>
+          </div>
+        </div>
+      </div>
+
 
 
     </main>
