--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
           <div class="col-9">
             <form id="track-search">
               <fieldset>
-                <div class="form-group">
+                <div method="get" class="form-group">
                   <label for="search-input">Search for a song</label>
                   <p>If you don't get the result you expect, try searching with both the name of the song and the artist.</p>
-                  <input type="search" name="search-input" id="search-input">
+                  <input type="search" name="search-input" id="search-input" title="search">
                   <button type="submit" id="search-submit">Search</button>
                 </div>
               </fieldset>
@@ -57,6 +57,13 @@
           </div>
           <div class="col-9">
             <span id="data-artist" class="data-point"></span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -68,6 +75,13 @@
           </div>
           <div class="col-9">
             <span id="data-album" class="data-point"></span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -79,6 +93,13 @@
           </div>
           <div class="col-9">
             <span id="data-duration" class="data-point"></span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -96,6 +117,13 @@
           </div>
           <div class="col-9">
             <span id="data-tempo" class="data-point"></span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -113,6 +141,13 @@
           </div>
           <div class="col-9">
             <span id="data-key" class="data-point"></span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -129,7 +164,16 @@
             </details>
           </div>
           <div class="col-9">
-            <span id="data-popularity" class="data-point"></span>
+            <span class="bar">
+              <span id="data-popularity" class="data-point"></span>
+              <div class="spinner">
+                <div class="rect1"></div>
+                <div class="rect2"></div>
+                <div class="rect3"></div>
+                <div class="rect4"></div>
+                <div class="rect5"></div>
+              </div>
+            </span>
           </div>
         </div>
       </div>
@@ -146,7 +190,16 @@
             </details>
           </div>
           <div class="col-9">
-            <span id="data-danceability" class="data-point"></span>
+            <span class="bar">
+              <span id="data-danceability" class="data-point"></span>
+              <div class="spinner">
+                <div class="rect1"></div>
+                <div class="rect2"></div>
+                <div class="rect3"></div>
+                <div class="rect4"></div>
+                <div class="rect5"></div>
+              </div>
+            </span>
           </div>
         </div>
       </div>
@@ -163,7 +216,16 @@
             </details>
           </div>
           <div class="col-9">
-            <span id="data-energy" class="data-point"></span>
+            <span class="bar">
+              <span id="data-energy" class="data-point"></span>
+              <div class="spinner">
+                <div class="rect1"></div>
+                <div class="rect2"></div>
+                <div class="rect3"></div>
+                <div class="rect4"></div>
+                <div class="rect5"></div>
+              </div>
+            </span>
           </div>
         </div>
       </div>
@@ -180,16 +242,25 @@
             </details>
           </div>
           <div class="col-9">
-            <span id="data-valence" class="data-point"></span>
+            <span class="bar">
+              <span id="data-valence" class="data-point"></span>
+              <div class="spinner">
+                <div class="rect1"></div>
+                <div class="rect2"></div>
+                <div class="rect3"></div>
+                <div class="rect4"></div>
+                <div class="rect5"></div>
+              </div>
+            </span>
           </div>
         </div>
       </div>
 
-
-
     </main>
 
+    <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="./jquery.getimagedata.min.js"></script>
     <script src="./index.js" charset="utf-8"></script>
 
   </body>
