--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
     <title>Songdata</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <main>
 
-      <div class="container">
+      <div class="container header">
         <div class="row">
           <div class="col-3">
             <h1>Song data</h1>
@@ -75,72 +74,6 @@
           </div>
           <div class="col-9">
             <span id="data-album" class="data-point"></span>
-            <div class="spinner">
-              <div class="rect1"></div>
-              <div class="rect2"></div>
-              <div class="rect3"></div>
-              <div class="rect4"></div>
-              <div class="rect5"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-3">
-            <h2>Song length</h2>
-          </div>
-          <div class="col-9">
-            <span id="data-duration" class="data-point"></span>
-            <div class="spinner">
-              <div class="rect1"></div>
-              <div class="rect2"></div>
-              <div class="rect3"></div>
-              <div class="rect4"></div>
-              <div class="rect5"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-3">
-            <h2>Tempo</h2>
-            <details>
-              <summary>About tempo</summary>
-              <div>
-                <p>The overall estimated tempo of a track in beats per minute (BPM). In musical terminology, tempo is the speed or pace of a given piece and derives directly from the average beat duration.</p>
-              </div>
-            </details>
-          </div>
-          <div class="col-9">
-            <span id="data-tempo" class="data-point"></span>
-            <div class="spinner">
-              <div class="rect1"></div>
-              <div class="rect2"></div>
-              <div class="rect3"></div>
-              <div class="rect4"></div>
-              <div class="rect5"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-3">
-            <h2>Key and mode</h2>
-            <details>
-              <summary>About key and mode</summary>
-              <div>
-                <p>The key the track is in. Mode indicates the modality (major or minor) of a track, the type of scale from which its melodic content is derived.</p>
-              </div>
-            </details>
-          </div>
-          <div class="col-9">
-            <span id="data-key" class="data-point"></span>
             <div class="spinner">
               <div class="rect1"></div>
               <div class="rect2"></div>
@@ -244,14 +177,113 @@
           <div class="col-9">
             <span class="bar">
               <span id="data-valence" class="data-point"></span>
-              <div class="spinner">
-                <div class="rect1"></div>
-                <div class="rect2"></div>
-                <div class="rect3"></div>
-                <div class="rect4"></div>
-                <div class="rect5"></div>
-              </div>
             </span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Genres</h2>
+            <details>
+              <summary>About genres</summary>
+              <div>
+                <p>A list of genres the song's artist is associated with.</p>
+              </div>
+            </details>
+          </div>
+          <div class="col-9">
+            <span id="data-genres" class="data-point genres"></span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Length</h2>
+          </div>
+          <div class="col-9">
+            <span id="data-duration" class="data-point"></span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Key and mode</h2>
+            <details>
+              <summary>About key and mode</summary>
+              <div>
+                <p>The key the track is in. Mode indicates the modality (major or minor) of a track, the type of scale from which its melodic content is derived.</p>
+              </div>
+            </details>
+          </div>
+          <div class="col-9">
+            <span id="data-key" class="data-point"></span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2>Tempo</h2>
+            <details>
+              <summary>About tempo</summary>
+              <div>
+                <p>The overall estimated tempo of a track in beats per minute (BPM). In musical terminology, tempo is the speed or pace of a given piece and derives directly from the average beat duration.</p>
+              </div>
+            </details>
+          </div>
+          <div class="col-9">
+            <span id="data-tempo" class="data-point"></span>
+            <div class="spinner">
+              <div class="rect1"></div>
+              <div class="rect2"></div>
+              <div class="rect3"></div>
+              <div class="rect4"></div>
+              <div class="rect5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <p>Footer</p>
           </div>
         </div>
       </div>
@@ -260,7 +292,6 @@
 
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="./jquery.getimagedata.min.js"></script>
     <script src="./index.js" charset="utf-8"></script>
 
   </body>
