--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
 
-      <div class="container header">
+      <div class="container">
         <div class="row">
           <div class="col-3">
             <h1>Song data</h1>
@@ -283,7 +283,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-            <p>Footer</p>
+            <p>Made by <a href="http://thomaschris.co.uk/">Chris Thomas</a></p>
           </div>
         </div>
       </div>
